# news_api

./: README.md  docker-compose.yml  dockerfile  pyproject.toml
news_api/: main.py
news_api/api/: __init__.py  news.py
news_api/app/: news_parser.py
news_api/database/: __init__.py  models.py  news_storage.py
