[tool.poetry]
name = "news_api"
version = "0.1.0"
description = ""
authors = ["Rodion <rodiononon@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
SQLAlchemy = "1.4.46"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
